namespaces/live.cloud-platform.service.justice.gov.uk/laa-amend-a-claim-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-amend-a-claim-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ccms-pui-teamonly"
    cloud-platform.justice.gov.uk/application: "Amend a claim"
    cloud-platform.justice.gov.uk/owner: "PUI Modernisation: ccmspuimodernisation@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-amend-a-claim"
    cloud-platform.justice.gov.uk/team-name: "laa-amend-a-claim"
    cloud-platform.justice.gov.uk/review-after: ""
